--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -162,6 +162,17 @@
   }
 }
 
+@media only screen and (max-height: 800px){
+  .container{
+    .hero{
+      height:100vh;
+      .shade{
+        height:100vh;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .container {
     .hero {
